# certsd-open

./: .env.example  .gitignore  Cargo.toml  README.md  certsd.test.conf  rustfmt.toml
src/: acme.rs  cf.rs  config.rs  consts.rs  lib.rs  main.rs  notify.rs
